# oxyb

./: Cargo.toml  README.md  values.txt
assets/objects/: console.gltf  table.gltf  table2.gltf
assets/shaders/: post_processing.wgsl
src/: camera.rs  console.rs  default_terminal_state.json  dump.rs  floor.rs  game.rs  main.rs  mainmenu.rs  map.rs  models.rs  postprocessing.rs
