[package]
name = "oxyb"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.13.0", features = ["dynamic_linking"] }
bevy_flycam = "*"
bevy_rapier3d = "0.25.0"
bevy_ui = "0.13.1"
iyes_perf_ui = "0.2.3"
rand = "0.8.5"


# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

